# pine

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  elm-beam.cabal  elm-compiler.cabal  elm-make.cabal  elm.json  index.js  package.json  pine.cabal  stack.yaml
src/: Compile.hs  Main.hs  Optimize.hs  Path.hs  Paths_elm.hs  Prelude.elm  Runtime.erl
src/AST/: Declaration.elm  Effects.elm  Exposing.elm  Helpers.elm  Kernel.elm  Literal.elm  Module.elm  Module.hs  Pattern.elm  Type.elm  Type.hs  Variable.elm
src/AST/Expression/: Canonical.elm  Optimized.elm  Optimized.hs  Source.elm
src/AST/Module/: Name.elm
src/Docs/: AST.elm
src/Elm/: Compiler.elm  Compiler.hs  Package.elm
src/Elm/Compiler/: Module.hs  Version.elm  Version.hs
src/Generate/: CoreErlang.hs  ErlangCore.hs  Llvm.hs
src/Generate/CoreErlang/: BIF.hs  Builder.hs  BuiltIn.hs  Constant.hs  Environment.hs  Function.hs  Literal.hs  Pattern.hs  Substitution.hs
src/Generate/ErlangCore/: Application.hs  BIF.hs  Builder.hs  Constant.hs  Function.hs  Pattern.hs  String.hs  Substitution.hs
src/Native/: Array.erl  Basics.erl  Bitwise.erl  Char.erl  Date.erl  Debug.erl  Json.erl  List.erl  Platform.erl  Regex.erl  Scheduler.erl  String.erl  Time.erl  Utils.erl
src/Optimize/: DecisionTree.elm  DecisionTree.hs  Environment.elm
src/Parse/: Helpers.elm  Pattern.elm  Primitives.elm  Primitives.hs  Repl.elm  Type.elm
src/Pine/: Compiler.hs
src/Pipeline/: Compile.hs  Generate.hs
src/Pipeline/Crawl/: Package.hs
src/Reporting/: Annotation.elm  Bag.elm  Error.elm  Helpers.elm  Region.elm  Report.elm
src/Reporting/Error/: Docs.elm  Syntax.elm
src/Reporting/Render/: Code.elm  Type.elm
tests/: Main.elm  ParserTest.elm  elm-package.json  run-tests.sh
tests/Runner/: Log.elm  String.elm
tests/Test/: Compiler.hs
tests/test-files/good-expected-core/Cases/: CharCase.elm.core  ListPattern.elm.core  ListZip.elm.core  ShadowPattern.elm.core
tests/test-files/good-expected-core/CodeGenBugs/: CommentInterpretedAsInfix.elm.core  NestedPatternMatch.elm.core  RecursiveLet.elm.core  TailRecursion_ListAny.elm.core
tests/test-files/good-expected-core/Declarations/: Types.elm.core
tests/test-files/good-expected-core/Functions/: AliasPattern.elm.core  AsArgument.elm.core  Native.elm.core  PatternAndLet.elm.core  Recursion.elm.core  RecursiveShadow.elm.core  Simple.elm.core  TailCall.elm.core  TailDefLet.elm.core
tests/test-files/good-expected-core/Lists/: EmptyList.elm.core  NonEmptyList.elm.core
tests/test-files/good-expected-core/Literals/: Characters.elm.core  Multiline.elm.core  Negatives.elm.core  Numbers.elm.core  QuotesAndComments.elm.core  Unicode.elm.core
tests/test-files/good-expected-core/Records/: Access.elm.core  AliasSubstitution.elm.core  NonHomogeneousRecords.elm.core  Update.elm.core
tests/test-files/good-expected-core/Soundness/: Apply.elm.core
tests/test-files/good/Cases/: ListPattern.elm  ListZip.elm  ShadowPattern.elm
tests/test-files/good/CodeGenBugs/: CommentInterpretedAsInfix.elm  RecursiveLet.elm
tests/test-files/good/Declarations/: Types.elm
tests/test-files/good/Functions/: AliasPattern.elm  AsArgument.elm  Native.elm  PatternAndLet.elm  Recursion.elm  RecursiveShadow.elm  Simple.elm  TailCall.elm  TailDefLet.elm
tests/test-files/good/Literals/: Characters.elm  QuotesAndComments.elm  Unicode.elm
tests/test-files/good/Records/: Update.elm
