
Name: elm-beam
Version: 0.18

License: BSD3
License-file: LICENSE

Category: Compiler, Language

Extra-source-files: changelog.md

Cabal-version: >=1.9
Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/hkgumbs/elm-beam.git



Executable elm-beam
    ghc-options:
        -threaded -O2 -W

    Main-is:
        Main.hs

    Hs-Source-Dirs:
        src

    other-modules:
        AST.Declaration,
        AST.Effects,
        AST.Expression.Canonical,
        AST.Expression.Optimized,
        AST.Expression.Source,
        AST.Helpers,
        AST.Literal,
        AST.Module,
        AST.Module.Name,
        AST.Pattern,
        AST.Type,
        AST.Variable,
        Canonicalize,
        Canonicalize.Binops,
        Canonicalize.Body,
        Canonicalize.Effects,
        Canonicalize.Environment,
        Canonicalize.Setup,
        Canonicalize.Sort,
        Canonicalize.Type,
        Canonicalize.Variable,
        Compile,
        Docs.AST,
        Docs.Centralize,
        Docs.Check,
        Elm.Compiler,
        Elm.Compiler.Imports,
        Elm.Compiler.Module,
        Elm.Compiler.Type,
        Elm.Compiler.Type.Extract,
        Elm.Compiler.Version,
        Elm.Docs,
        Elm.Package,
        Elm.Utils,
        Generate.ErlangCore,
        Generate.ErlangCore.Builder,
        Generate.ErlangCore.Constant,
        Generate.ErlangCore.Pattern,
        Generate.ErlangCore.Substitution,
        Nitpick.Pattern,
        Nitpick.PatternMatches,
        Nitpick.TopLevelTypes,
        Optimize,
        Optimize.Environment,
        Optimize.Inline,
        Parse.Declaration,
        Parse.Expression,
        Parse.Helpers,
        Parse.Literal,
        Parse.Module,
        Parse.Parse,
        Parse.Pattern,
        Parse.Primitives,
        Parse.Type,
        Reporting.Annotation,
        Reporting.Bag,
        Reporting.Error,
        Reporting.Error.Canonicalize,
        Reporting.Error.Docs,
        Reporting.Error.Pattern,
        Reporting.Error.Syntax,
        Reporting.Error.Type,
        Reporting.Helpers,
        Reporting.Region,
        Reporting.Render.Code,
        Reporting.Render.Type,
        Reporting.Report,
        Reporting.Result,
        Reporting.Warning,
        Type.Constrain.Effects,
        Type.Constrain.Expression,
        Type.Constrain.Literal,
        Type.Constrain.Pattern,
        Type.Environment,
        Type.Inference,
        Type.Solve,
        Type.State,
        Type.Type,
        Type.Unify,
        Validate,
        Paths_elm_beam

    Build-depends:
        aeson >= 0.11,
        aeson-pretty < 0.8,
        ansi-terminal >= 0.6.2.1 && < 0.7,
        ansi-wl-pprint >= 0.6.7 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7.0.0 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filepath >= 1 && < 2.0,
        language-glsl >= 0.0.2 && < 0.3,
        mtl >= 2.2 && < 3,
        parsec,
        pretty >= 1.0 && < 2.0,
        process,
        text >= 1 && < 2,
        union-find >= 0.2 && < 0.3


Test-Suite compiler-tests
    ghc-options:
        -O0 -W -Werror

    Type:
        exitcode-stdio-1.0

    Hs-Source-Dirs:
        tests, src

    Main-is:
        Test.hs

    other-modules:
        Test.Compiler
        Test.Property
        Test.Property.Arbitrary
        AST.Helpers
        AST.Declaration
        AST.Effects
        AST.Expression.Canonical
        AST.Expression.Optimized
        AST.Expression.Source
        AST.Literal
        AST.Module
        AST.Module.Name
        AST.Pattern
        AST.Type
        AST.Variable
        Canonicalize
        Canonicalize.Binops
        Canonicalize.Body
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Setup
        Canonicalize.Sort
        Canonicalize.Type
        Canonicalize.Variable
        Compile
        Docs.AST
        Docs.Centralize
        Docs.Check
        Elm.Compiler
        Elm.Compiler.Imports
        Elm.Compiler.Module
        Elm.Compiler.Type
        Elm.Compiler.Type.Extract
        Elm.Compiler.Version
        Elm.Docs
        Elm.Package
        Elm.Utils
        Generate.ErlangCore
        Generate.ErlangCore.Builder
        Generate.ErlangCore.Constant
        Generate.ErlangCore.Pattern
        Generate.ErlangCore.Substitution
        Nitpick.Pattern
        Nitpick.PatternMatches
        Nitpick.TopLevelTypes
        Optimize
        Optimize.Environment
        Optimize.Inline
        Parse.Declaration
        Parse.Expression
        Parse.Helpers
        Parse.Literal
        Parse.Module
        Parse.Parse
        Parse.Pattern
        Parse.Primitives
        Parse.Type
        Reporting.Annotation
        Reporting.Bag
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Helpers
        Reporting.Region
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Report
        Reporting.Result
        Reporting.Warning
        Type.Constrain.Effects
        Type.Constrain.Expression
        Type.Constrain.Literal
        Type.Constrain.Pattern
        Type.Environment
        Type.Inference
        Type.Solve
        Type.State
        Type.Type
        Type.Unify
        Validate

    build-depends:
        test-framework > 0.8 && < 0.9,
        test-framework-hunit >= 0.3 && < 0.4,
        test-framework-quickcheck2 >= 0.3 && < 0.4,
        HUnit >= 1.1 && < 2,
        QuickCheck >= 2 && < 3,
        aeson >= 0.11,
        aeson-pretty < 0.8,
        ansi-terminal >= 0.6.2.1 && < 0.7,
        ansi-wl-pprint >= 0.6.7 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7.0.0 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filemanip >= 0.3.5 && < 0.4,
        filepath >= 1 && < 2.0,
        language-glsl >= 0.0.2 && < 0.3,
        mtl >= 2.2 && < 3,
        parsec,
        pretty >= 1.0 && < 2.0,
        process,
        text >= 1 && < 2,
        union-find >= 0.2 && < 0.3
