Name: elm-make
Version: 0.18

License: BSD3

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

source-repository head
    type:     git
    location: git://github.com/hkgumbs/elm-beam.git

Executable elm-beam

    ghc-options:
        -threaded -O2 -W

    hs-source-dirs:
        src

    Main-is:
        Main.hs

    other-modules:
        BuildManager,
        Flags,
        Path,
        Paths_elm_make,
        Pipeline.Compile,
        Pipeline.Crawl,
        Pipeline.Crawl.Package,
        Pipeline.Generate,
        Pipeline.Plan,
        Report,
        TheMasterPlan,
        Utils.File

    Build-depends:
        aeson,
        ansi-terminal,
        ansi-wl-pprint,
        base >=4.2 && <5,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        containers >= 0.3,
        directory,
        elm-compiler == 0.18,
        elm-package,
        filepath,
        mtl >= 2.2.1 && < 3,
        optparse-applicative >= 0.11 && < 0.14,
        raw-strings-qq,
        time,
        text,
        process
