Name: pine
Category: Language
Version: 0.1.1
Maintainer: h.kofigumbs@gmail.com
Synopsis: Elm, for the Erlang VM
Description: Elm, for the Erlang VM.

Extra-Source-Files:
  README.md

License: BSD3
License-File: LICENSE

Cabal-Version: >=1.9
Build-Type: Simple

Bug-Reports: https://github.com/hkgumbs/pine-lang/issues
Homepage: https://github.com/hkgumbs/pine-lang#readme
Source-Repository head
    type:     git
    location: git://github.com/hkgumbs/pine-lang.git

Executable pine
    main-is: Main.hs
    other-modules:
        -- shared from compiler/
        Elm.Compiler
        Elm.Compiler.Module
        Elm.Compiler.Objects
        Elm.Compiler.Type
        Elm.Docs
        Elm.Kernel
        Elm.Header
        Elm.Name
        Elm.Package
        Json.Decode
        Json.Encode

        -- private from compiler/
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.Module.Name
        AST.Utils.Binop
        AST.Utils.Shader
        AST.Utils.Type
        AST.Valid
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Data.Bag
        Data.Index
        Data.OneOrMore
        Elm.Compiler.Imports
        Elm.Compiler.Type.Extract
        Elm.Compiler.Version
        Elm.Interface
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Mode
        Generate.JavaScript.Name
        Json.Decode.Error
        Json.Decode.Internals
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Module
        Parse.Parse
        Parse.Pattern
        Parse.Primitives
        Parse.Primitives.Internals
        Parse.Primitives.Kernel
        Parse.Primitives.Keyword
        Parse.Primitives.Number
        Parse.Primitives.Shader
        Parse.Primitives.Symbol
        Parse.Primitives.Utf8
        Parse.Primitives.Variable
        Parse.Primitives.Whitespace
        Parse.Repl
        Parse.Shader
        Parse.Type
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Region
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind
        Validate
        Paths_elm

      -- pine
      Generate.Llvm
      Pine.Compiler
      Pine.Core
      Paths_pine
    hs-source-dirs: src, elm/compiler/src
    build-depends:
      ansi-terminal >= 0.8 && < 0.9,
      ansi-wl-pprint >= 0.6.8 && < 0.7,
      base >=4.8 && <5,
      binary >= 0.8 && < 0.9,
      bytestring >= 0.9 && < 0.11,
      containers >= 0.5.8.2 && < 0.6,
      directory >= 1.2.3.0 && < 2.0,
      edit-distance >= 0.2 && < 0.3,
      file-embed,
      filepath >= 1 && < 2.0,
      ghc-prim,
      -- haskeline,
      -- HTTP >= 4000.2.5 && < 4000.4,
      -- http-client >= 0.5 && < 0.6,
      -- http-client-tls >= 0.3 && < 0.4,
      -- http-types >= 0.9 && < 1.0,
      language-glsl >= 0.0.2 && < 0.3,
      llvm-hs-pretty,
      llvm-hs-pure,
      logict,
      mtl >= 2.2.1 && < 3,
      -- network >= 2.4 && < 2.7,
      parsec,
      process,
      raw-strings-qq,
      scientific,
      SHA,
      snap-core,
      snap-server,
      template-haskell,
      text >= 1 && < 2,
      time,
      unordered-containers,
      utf8-string,
      vector,
      zip-archive
